--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,15 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-    <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
     <servlet>
         <servlet-name>SimpleServer</servlet-name>
         <servlet-class>com.univer.simpleservletserver.SimpleServer</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>HelloServlet</servlet-name>
+        <servlet-class>com.univer.simpleservletserver.HelloServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>SimpleServer</servlet-name>
         <url-pattern>/calculate</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>HelloServlet</servlet-name>
+        <url-pattern>/hello</url-pattern>
+    </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>hello</welcome-file>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
 </web-app>
